# LLM_Counsil_Project

./: .gitignore  LLM Cousil.json  README.md  audit_log.jsonl  config.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  answer_agent.py  judge_agent.py
audit/: __init__.py  logger.py
decision/: __init__.py  decision_builder.py
safety/: __init__.py  input_gate.py  output_gate.py
tests/: test_imports.py
